--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,7 @@
   * under the License.
   *
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -31,7 +30,7 @@
   <groupId>de.lgohlke.mojo</groupId>
   <artifactId>enforcer-rules-report</artifactId>
   <packaging>jar</packaging>
-  <version>1.3.1.2-SNAPSHOT</version>
+  <version>1.3.1.2</version>
 
   <name>Apache Maven Enforcer Rules Report API</name>
   <description>This component contains the standard Enforcer Rules</description>
@@ -41,7 +40,7 @@
     <connection>scm:git:git@github.com:lkwg82/enforcer-rules-report.git</connection>
     <developerConnection>scm:git:git@github.com:lkwg82/enforcer-rules-report.git</developerConnection>
     <url>git@github.com:lkwg82/enforcer-rules-report.git</url>
-    <tag>HEAD</tag>
+    <tag>enforcer-rules-report-1.3.1.2</tag>
   </scm>
   <issueManagement>
     <system>github</system>
