--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
   <groupId>de.lgohlke.mojo</groupId>
   <artifactId>enforcer-rules-report</artifactId>
   <packaging>jar</packaging>
-  <version>1.3.1.2</version>
+  <version>1.3.1.3-SNAPSHOT</version>
 
   <name>Apache Maven Enforcer Rules Report API</name>
   <description>This component contains the standard Enforcer Rules</description>
@@ -40,7 +40,7 @@
     <connection>scm:git:git@github.com:lkwg82/enforcer-rules-report.git</connection>
     <developerConnection>scm:git:git@github.com:lkwg82/enforcer-rules-report.git</developerConnection>
     <url>git@github.com:lkwg82/enforcer-rules-report.git</url>
-    <tag>enforcer-rules-report-1.3.1.2</tag>
+    <tag>HEAD</tag>
   </scm>
   <issueManagement>
     <system>github</system>
